[gd_scene load_steps=26 format=3 uid="uid://dxk03otii1f5n"]

[ext_resource type="Script" path="res://Script/Easy2.gd" id="1_4wutj"]
[ext_resource type="Texture2D" uid="uid://d4a11leryb74j" path="res://Character/abangx1 (2).png" id="2_a3t2d"]
[ext_resource type="Texture2D" uid="uid://dexraig1t2vr7" path="res://background/ingame/ingame 1.png" id="2_vta8q"]
[ext_resource type="Texture2D" uid="uid://beptn4d6fayga" path="res://background/ingame/ingame 2.png" id="3_2h42m"]
[ext_resource type="PackedScene" uid="uid://b4lrqmiaibjj" path="res://Scene/Character.tscn" id="3_0287q"]
[ext_resource type="Texture2D" uid="uid://b1gyo0uj2lgkh" path="res://uang/1.png" id="4_aaytc"]
[ext_resource type="Texture2D" uid="uid://612wp881a2jn" path="res://background/ingame/ingame 3.png" id="4_kpbpn"]
[ext_resource type="Texture2D" uid="uid://cujqfmh5t2s5p" path="res://uang/2.png" id="5_1ujcd"]
[ext_resource type="Texture2D" uid="uid://drgimc8is1itg" path="res://uang/5.png" id="6_7341a"]
[ext_resource type="Texture2D" uid="uid://c5q5g6oq3p3v" path="res://uang/10.png" id="7_q18ao"]
[ext_resource type="Texture2D" uid="uid://cbw5fm0nm6xgt" path="res://uang/20.png" id="8_s1sb6"]
[ext_resource type="Texture2D" uid="uid://bg8he4yqo0gte" path="res://uang/50.png" id="9_10nbe"]
[ext_resource type="AudioStream" uid="uid://ji0xgow2ji2g" path="res://audio/correct-aul.mp3" id="10_07cpm"]
[ext_resource type="AudioStream" uid="uid://j17e5jpt35rx" path="res://audio/negative_beeps-6008.mp3" id="11_bsmoo"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_espkt"]
frames = 3
frame_0/texture = ExtResource("2_vta8q")
frame_1/texture = ExtResource("3_2h42m")
frame_1/duration = 1.0
frame_2/texture = ExtResource("4_kpbpn")
frame_2/duration = 1.0

[sub_resource type="Animation" id="Animation_xy3wu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KangTiket:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(94, 752)]
}

[sub_resource type="Animation" id="Animation_hnxat"]
resource_name = "kang tiket muncul"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KangTiket:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(94, 752), Vector2(94, 568)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxy5y"]
_data = {
"RESET": SubResource("Animation_xy3wu"),
"kang tiket muncul": SubResource("Animation_hnxat")
}

[sub_resource type="ImageTexture" id="ImageTexture_34aya"]

[sub_resource type="LabelSettings" id="LabelSettings_kwpnw"]
font_size = 20
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_mgi74"]
font_size = 23
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 7

[sub_resource type="LabelSettings" id="LabelSettings_n4kue"]
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 5

[sub_resource type="GDScript" id="GDScript_pc423"]
script/source = "extends Control

var input_player
# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func _on_btn_1_pressed():
	if input_player.length() < 4:
		input_player += \"1\"
	print(\"Player input code: \", input_player)


func _on_btn_0_pressed():
	if input_player.length() < 4:
		input_player += \"0\"
	print(\"Player input code: \", input_player)
	


func _on_btn_submit_pressed():
	pass # Replace with function body.
"

[sub_resource type="LabelSettings" id="LabelSettings_v3j3x"]
font_size = 23
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_g64dy"]
font_size = 20
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 5

[node name="Node" type="Node"]
script = ExtResource("1_4wutj")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AnimatedTexture_espkt")
expand_mode = 1

[node name="MoneyImage" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_hxy5y")
}

[node name="KangTiket" type="Sprite2D" parent="TextureRect"]
z_index = 1
texture_filter = 1
position = Vector2(94, 752)
scale = Vector2(4.54297, 4.48047)
texture = ExtResource("2_a3t2d")

[node name="Uang" type="Sprite2D" parent="TextureRect"]
texture_filter = 1
position = Vector2(440, 320)
scale = Vector2(0.1, 0.1)
texture = SubResource("ImageTexture_34aya")

[node name="Input_Number" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 872.0
offset_top = 363.0
offset_right = 1004.0
offset_bottom = 439.0
label_settings = SubResource("LabelSettings_kwpnw")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 894.0
offset_top = 49.0
offset_right = 1084.0
offset_bottom = 119.0
label_settings = SubResource("LabelSettings_mgi74")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrderLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 690.0
offset_top = 280.0
offset_right = 794.0
offset_bottom = 340.0
label_settings = SubResource("LabelSettings_n4kue")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimer" type="Timer" parent="TextureRect"]

[node name="CustomerTimer" type="Timer" parent="TextureRect"]

[node name="Control" type="Control" parent="TextureRect"]
z_index = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = SubResource("GDScript_pc423")

[node name="btn_money1" type="Button" parent="TextureRect/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 177.0
offset_top = 538.0
offset_right = 241.0
offset_bottom = 570.0

[node name="btn_money2" type="Button" parent="TextureRect/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 258.0
offset_top = 537.0
offset_right = 323.0
offset_bottom = 570.0

[node name="btn_money5" type="Button" parent="TextureRect/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 339.0
offset_top = 538.0
offset_right = 403.0
offset_bottom = 570.0

[node name="btn_money10" type="Button" parent="TextureRect/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 178.0
offset_top = 586.0
offset_right = 241.0
offset_bottom = 618.0

[node name="btn_money20" type="Button" parent="TextureRect/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 258.0
offset_top = 586.0
offset_right = 322.0
offset_bottom = 618.0

[node name="btn_money50" type="Button" parent="TextureRect/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 339.0
offset_top = 586.0
offset_right = 403.0
offset_bottom = 618.0

[node name="btn_reset" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 433.0
offset_top = 558.0
offset_right = 517.0
offset_bottom = 599.0
text = "Reset"

[node name="btn_1" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 945.0
offset_top = 472.0
offset_right = 1010.0
offset_bottom = 532.0
text = "1"

[node name="btn_0" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 869.0
offset_top = 472.0
offset_right = 928.0
offset_bottom = 531.0
text = "0"

[node name="btn_submit" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 874.0
offset_top = 555.0
offset_right = 1007.0
offset_bottom = 605.0
text = "submit"

[node name="backspace" type="Button" parent="TextureRect/Control"]
layout_mode = 0
offset_left = 1041.0
offset_top = 512.0
offset_right = 1103.0
offset_bottom = 574.0
text = "âŒ«"

[node name="CustomerContainer" type="Node2D" parent="TextureRect"]

[node name="CustomerInstance" parent="TextureRect/CustomerContainer" instance=ExtResource("3_0287q")]

[node name="TimeLeftLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 97.0
offset_top = 49.0
offset_right = 287.0
offset_bottom = 119.0
label_settings = SubResource("LabelSettings_v3j3x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputMoney" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 175.0
offset_top = 422.0
offset_right = 405.0
offset_bottom = 498.0
label_settings = SubResource("LabelSettings_g64dy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Uang1" type="Sprite2D" parent="TextureRect"]
z_index = 1
position = Vector2(209, 554)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_aaytc")

[node name="Uang2" type="Sprite2D" parent="TextureRect"]
z_index = 1
position = Vector2(290, 554)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_1ujcd")

[node name="Uang5" type="Sprite2D" parent="TextureRect"]
z_index = 1
position = Vector2(371, 554)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_7341a")

[node name="Uang10" type="Sprite2D" parent="TextureRect"]
z_index = 1
position = Vector2(209, 602)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_q18ao")

[node name="Uang20" type="Sprite2D" parent="TextureRect"]
z_index = 1
position = Vector2(290, 602)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_s1sb6")

[node name="Uang50" type="Sprite2D" parent="TextureRect"]
z_index = 1
position = Vector2(371, 602)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_10nbe")

[node name="wrong" type="AudioStreamPlayer" parent="TextureRect"]
stream = ExtResource("11_bsmoo")

[node name="correct" type="AudioStreamPlayer" parent="TextureRect"]
stream = ExtResource("10_07cpm")

[connection signal="timeout" from="TextureRect/GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="TextureRect/CustomerTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="TextureRect/Control/btn_money1" to="." method="_on_btn_money_1_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_money2" to="." method="_on_btn_money_2_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_money5" to="." method="_on_btn_money_5_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_money10" to="." method="_on_btn_money_10_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_money20" to="." method="_on_btn_money_20_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_money50" to="." method="_on_btn_money_50_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_reset" to="." method="_on_btn_reset_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_0" to="." method="_on_btn_0_pressed"]
[connection signal="pressed" from="TextureRect/Control/btn_submit" to="." method="_on_btn_submit_pressed"]
[connection signal="pressed" from="TextureRect/Control/backspace" to="." method="_on_backspace_pressed"]
